changes for JUNIt